# socialcrew-ai-backend

./: .gitignore  Procfile  README.md  analytics_summary.md  package-lock.json  package.json  pyproject.toml  social_posts.json  tsconfig.json
src/: app.module.ts  main.ts
src/agents/: content-creator.service.ts  social-analyst.service.ts  strategy-agent.service.ts
src/chat/: chat.controller.ts  chat.service.ts
src/generate/: generate.controller.ts  generate.module.ts  generate.service.ts  generate.types.ts  socialcrew.graph.ts
src/health/: health.controller.ts
src/socialcrew_ai/: crew.py  main.py
src/socialcrew_ai/config/: agents.yaml  tasks.yaml
