[project]
name = "socialcrew_ai"
version = "0.1.0"
description = "socialcrew-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
socialcrew_ai = "socialcrew_ai.main:run"
run_crew = "socialcrew_ai.main:run"
train = "socialcrew_ai.main:train"
replay = "socialcrew_ai.main:replay"
test = "socialcrew_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'"
]

